--- a/ClientFileUpload/src/main/resource/fxml/LoginUI.fxml
+++ b/ClientFileUpload/src/main/resource/fxml/LoginUI.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="loginUI" styleClass="pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controllers.LoginUIController">
+<VBox fx:id="loginUI" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controllers.LoginUIController">
    <children>
       <GridPane hgap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="400.0" VBox.vgrow="ALWAYS">
         <columnConstraints>
