--- a/ClientFileUpload/src/main/resource/stylesheet/app.css
+++ b/ClientFileUpload/src/main/resource/stylesheet/app.css
@@ -5,9 +5,7 @@
 }
 
 .pane{
-    -fx-background-image: url("/image/pic.jpg");
-    -fx-background-repeat: stretch;   
-    -fx-background-position: center center;
+-fx-background-color: #468CD1;
 }
 
 .label{
