--- a/ClientFileUpload/src/main/resource/fxml/BaseUI.fxml
+++ b/ClientFileUpload/src/main/resource/fxml/BaseUI.fxml
@@ -1,25 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="borderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controllers.BaseUIController">
+<BorderPane fx:id="borderPane" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controllers.BaseUIController">
    <center>
-      <VBox fx:id="centerVBox" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
-         <children>
-            <TabPane tabClosingPolicy="UNAVAILABLE" tabMaxHeight="40.0" tabMaxWidth="150.0" tabMinHeight="40.0" tabMinWidth="100.0" VBox.vgrow="ALWAYS">
-               <tabs>
-                  <Tab fx:id="logIn" closable="false" text="Log In" />
-                  <Tab fx:id="signUp" closable="false" text="Sign Up" />
-               </tabs>
-            </TabPane>
-         </children>
-      </VBox>
+      <VBox fx:id="centerVBox" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" BorderPane.alignment="CENTER" />
    </center>
    <top>
       <HBox minHeight="100.0" BorderPane.alignment="CENTER" />
