--- a/ClientFileUpload/src/main/resource/fxml/FileUploadClientUI.fxml
+++ b/ClientFileUpload/src/main/resource/fxml/FileUploadClientUI.fxml
@@ -3,12 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controllers.FileUploadClientUIController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controllers.FileUploadClientUIController">
    <children>
       <HBox alignment="CENTER_LEFT" spacing="10.0">
          <children>
@@ -26,7 +27,7 @@
                   </Label>
                </children>
             </HBox>
-            <HBox spacing="10.0">
+            <HBox alignment="CENTER" spacing="10.0">
                <children>
                   <Button fx:id="editButton" mnemonicParsing="false" onAction="#handleEditButtonAction" text="Edit Details" />
                   <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#handleLogoutAction" text="Logout" />
@@ -34,34 +35,61 @@
             </HBox>
          </children>
       </HBox>
-      <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="20.0" prefHeight="50.0" spacing="10.0">
+      <HBox spacing="10.0" VBox.vgrow="ALWAYS">
          <children>
-            <Label text="URL">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Label>
-            <TextField fx:id="urlTextField" HBox.hgrow="ALWAYS" />
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="50.0" spacing="10.0">
-         <children>
-            <Label text="Click to upload a file to server">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Label>
-            <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#handleUpload" text="Upload" />
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="50.0" spacing="10.0">
-         <children>
-            <Label text="Click to download a file from server">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Label>
-            <Button fx:id="downloadButton" mnemonicParsing="false" onAction="#handleDownload" text="Download" />
+            <VBox>
+               <children>
+                  <HBox alignment="CENTER_LEFT" prefHeight="50.0" spacing="10.0">
+                     <children>
+                        <Label text="URL">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="urlTextField" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="50.0" spacing="10.0">
+                     <children>
+                        <Label text="Click to upload a file to server">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#handleUpload" text="Upload" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="50.0" spacing="10.0">
+                     <children>
+                        <Label text="Click to download a file from server">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="downloadButton" mnemonicParsing="false" onAction="#handleDownload" text="Download" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+            <VBox spacing="10.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <HBox alignment="CENTER_LEFT">
+                     <children>
+                        <HBox HBox.hgrow="ALWAYS">
+                           <children>
+                              <Button fx:id="previousButton" mnemonicParsing="false" onAction="#handlePreviousButtonClick" text="previous" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT">
+                           <children>
+                              <Button fx:id="nextButton" mnemonicParsing="false" onAction="#handleNextButtonClick" text="next" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </HBox>
+                  <ScrollPane fx:id="scrollPane" maxHeight="600.0" maxWidth="850.0" VBox.vgrow="ALWAYS" />
+               </children>
+            </VBox>
          </children>
       </HBox>
    </children>
